CSS and layout fixes

--- a/Finsurity.html
+++ b/Finsurity.html
@@ -158,7 +158,7 @@
         </nav>
     </div>
 </section>
-<div style="height: 160px"> </div>
+<div class="nav-ht-fix"> </div>
 <div class="main-bg">
     <div class="img-overlay">
         <h1 class="main-text-heading">
