--- a/tax-and-regulatory.html
+++ b/tax-and-regulatory.html
@@ -158,7 +158,7 @@
         </nav>
     </div>
 </section>
-<div style="height: 160px"> </div>
+<div class="nav-ht-fix"> </div>
 <div class="main-bg">
     <div class="img-overlay">
         <h1 class="main-text-heading">
@@ -175,14 +175,14 @@
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
         <div class="col-sm-3">
-            <div class="sidebar-item">
+            <div class="sidebar-item ">
                 <div class="make-me-sticky">
-                    <div>
+                    <div  style="padding: 10px 20px 20px 40px">
                         <h4 style="text-align:left">Our Services</h4>
                         <ul class="ul-sidenav-list" type="none">
-                            <li><a href="#f"> Process Improvement & Risk advisory </a></li>
+                            <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
                             <br>
-                            <li><a href="#f">Auditing and Assurance</a></li>
+                            <li> <a href="#f">Auditing and Assurance</a></li>
                             <br>
                             <li><a href="#f">Tax and regulatory</a></li>
                             <br>
