--- a/transferpricing.html
+++ b/transferpricing.html
@@ -157,7 +157,7 @@
         </nav>
     </div>
 </section>
-<div style="height: 160px"> </div>
+<div class="nav-ht-fix"> </div>
 <div class="main-bg">
     <div class="img-overlay">
         <h1 class="main-text-heading">
@@ -172,7 +172,7 @@
         <div class="col-sm-3">
             <div class="sidebar-item ">
                 <div class="make-me-sticky">
-                    <div  style="padding: 40px 20px 20px 40px">
+                    <div  style="padding: 10px 20px 20px 40px">
                         <h4 style="text-align:left">Our Services</h4>
                         <ul class="ul-sidenav-list" type="none">
                             <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
