--- a/auditing.html
+++ b/auditing.html
@@ -175,7 +175,7 @@
         <div class="col-sm-3">
             <div class="sidebar-item ">
                 <div class="make-me-sticky">
-                    <div  style="padding: 10px 20px 20px 40px">
+                    <div  style="padding: 10px 20px 20px 10px">
                         <h4 style="text-align:left">Our Services</h4>
                         <ul class="ul-sidenav-list" type="none">
                             <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
@@ -221,7 +221,7 @@
             </div>
         </div>
         <div class="col-sm-9">
-            <div class="body-text">
+            <div class="body-text-2">
                 <h4>Our Unique Approach To Audit And Assurance Services</h4>
                 In a time when audit practices are essentially undertaken as an obligatory compliance mechanism or simply a number crunching practice by various firms, we at Coinmen take the liberty of using our auditing and assurance services to evaluate existing financial procedures of a business and gain extensive insight to help our clients. This allows us to holistically understand a business’s functionality and operations, thereby allowing us to develop better financial reports/analysis, maintain more accurate records, and bridge gaps faster so that fiscal planning procedures become more efficient over time.<br><br>
                 <br>
