--- a/financialaccounting.html
+++ b/financialaccounting.html
@@ -172,7 +172,7 @@
         <div class="col-sm-3">
             <div class="sidebar-item ">
                 <div class="make-me-sticky">
-                    <div  style="padding: 10px 20px 20px 40px">
+                    <div  style="padding: 10px 20px 20px 10px">
                         <h4 style="text-align:left">Our Services</h4>
                         <ul class="ul-sidenav-list" type="none">
                             <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
@@ -218,7 +218,7 @@
             </div>
         </div>
         <div class="col-sm-9">
-            <div class="body-text">
+            <div class="body-text-2">
                 <h4>Financial Accounting And GST Advisory Services</h4>
                 <br>Acquiring reliable and efficient outsourced accounting services in India is a known challenge. Companies face issues ranging from quality of analysis presented in financial reporting processes to the inherent factor of maintaining trust, as well as the lack of knowledge and experience when it comes to maintaining the latest reporting standards. Add that to the ever-evolving indirect tax scenario where GST plays a major role in terms of doing business in India for enterprises and consumers both, the need to provide holistic advisory along with astute compliance management services becomes paramount.
                 <br>
