--- a/riskadvisory.html
+++ b/riskadvisory.html
@@ -161,7 +161,7 @@
 <div class="main-bg">
     <div class="img-overlay">
         <h1 class="main-text-heading">
-            Assuring Financial Security
+            Process Improvement & Risk Advisory
         </h1>
         <div class="main-text-subtext">
             Finsurety is a holistic tax, financial, and business advisory firm with an aim to help companies explore opportunities in India which benefit their businesses
@@ -175,7 +175,7 @@
         <div class="col-sm-3">
             <div class="sidebar-item ">
                 <div class="make-me-sticky">
-                    <div  style="padding: 10px 20px 20px 40px">
+                    <div  style="padding: 10px 20px 20px 10px">
                         <h4 style="text-align:left">Our Services</h4>
                         <ul class="ul-sidenav-list" type="none">
                             <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
@@ -221,7 +221,7 @@
             </div>
         </div>
         <div class="col-sm-9">
-            <div class="body-text">
+            <div class="body-text-2">
             <h4>The Value Of A Virtual CFO & Risk Advisory In Businesses</h4>
             It is common knowledge that a person in authority and of exceptional talent does not come in at a low cost. And especially for unlisted companies or those in the SME sector who may/may not have a working capital dependency, employing a full-time CFO for their vision might become a financial burden.
             <br><br>
