--- a/tax-and-regulatory.html
+++ b/tax-and-regulatory.html
@@ -177,7 +177,7 @@
         <div class="col-sm-3">
             <div class="sidebar-item ">
                 <div class="make-me-sticky">
-                    <div  style="padding: 10px 20px 20px 40px">
+                    <div  style="padding: 10px 20px 20px 10px">
                         <h4 style="text-align:left">Our Services</h4>
                         <ul class="ul-sidenav-list" type="none">
                             <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
@@ -223,7 +223,7 @@
             </div>
         </div>
         <div class="col-sm-9">
-            <div class="body-text">
+            <div class="body-text-2">
                 <h4>Understanding The Tax Scenario In India</h4>
                 Simply put, tax in India comes majorly in 2 forms: Direct tax and indirect tax. Direct tax in India
                 majorly deals with income tax, which is further segregated into individual tax (be it for Indian
