--- a/transferpricing.html
+++ b/transferpricing.html
@@ -172,7 +172,7 @@
         <div class="col-sm-3">
             <div class="sidebar-item ">
                 <div class="make-me-sticky">
-                    <div  style="padding: 10px 20px 20px 40px">
+                    <div  style="padding: 10px 20px 20px 10px">
                         <h4 style="text-align:left">Our Services</h4>
                         <ul class="ul-sidenav-list" type="none">
                             <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
@@ -218,7 +218,7 @@
             </div>
         </div>
         <div class="col-sm-9">
-            <div class="body-text">
+            <div class="body-text-2">
                 <h4>The Need For Transfer Pricing In Modern Businesses</h4>
                 Owed to the fact that transfer pricing is becoming an increasingly relevant and important aspect for businesses across the globe due to rapid expansion of the global markets, we believe that one must look at transfer pricing as an extension of a business rather than a mere compliance practice.
                 <br>
