--- a/CompanySecretarialServices.html
+++ b/CompanySecretarialServices.html
@@ -172,7 +172,7 @@
         <div class="col-sm-3">
             <div class="sidebar-item ">
                 <div class="make-me-sticky">
-                    <div  style="padding: 10px 20px 20px 40px">
+                    <div  style="padding: 10px 20px 20px 10px">
                         <h4 style="text-align:left">Our Services</h4>
                         <ul class="ul-sidenav-list" type="none">
                             <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
@@ -218,7 +218,7 @@
             </div>
         </div>
         <div class="col-sm-9">
-            <div class="body-text">
+            <div class="body-text-2">
                 <h4>Why Company Secretarial Services Require Emphasis</h4>
                 <br>
                 The setup of a company’s presence in India starts with its incorporation which involves everything ranging from strategy, execution, and compliance. This three-fold approach allows us to holistically undertake our company secretarial services with an off-the-textbook method to help foreign entrants in India develop a flexible yet robust business methodology, which carries room for scalability in the future.
