--- a/TransactionAdvisory.html
+++ b/TransactionAdvisory.html
@@ -172,7 +172,7 @@
         <div class="col-sm-3">
             <div class="sidebar-item ">
                 <div class="make-me-sticky">
-                    <div  style="padding: 10px 20px 20px 40px">
+                    <div  style="padding: 10px 20px 20px 10px">
                         <h4 style="text-align:left">Our Services</h4>
                         <ul class="ul-sidenav-list" type="none">
                             <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
@@ -218,7 +218,7 @@
             </div>
         </div>
         <div class="col-sm-9">
-            <div class="body-text">
+            <div class="body-text-2">
                 <h4>About Our Team And Its Approach To Transaction Advisory</h4>
                 <br>Transaction advisory requires a meticulous approach in its planning and execution. There are various facets which are covered under the umbrella of transaction advisory such as business development consulting, capital raising, joint venture negotiations, dealing with overseas litigation authorities, mergers and acquisition propositions, and so on.
                 <br>
