Our services, Images added

--- a/index_temp.html
+++ b/index_temp.html
@@ -39,7 +39,7 @@ maximum-scale=1.0, user-scalable=no" />
         <br>
         Financial
         <br>
-        Security and Serenity </div>
+        Surety and Security </div>
 </div>
 <div class="body-text">
 <!--    <center><h3>Insights</h3></center> <br>-->
